// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogPlayerArea スナップショット/bet phase 1`] = `
<DocumentFragment>
  <div
    class="css-dvxtzn"
  >
    <div
      class="css-79elbk"
    >
      <div
        class="css-aryzif"
      >
        <div
          class="css-shjrb7"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-04.svg"
          />
        </div>
        <div
          class="css-fni08i"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Clubs-09.svg"
          />
        </div>
        <div
          class="css-1bd1kgk"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-10.svg"
          />
        </div>
        <div
          class="css-2ikapx"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-11.svg"
          />
        </div>
        <div
          class="css-16c4tub"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Hearts-12.svg"
          />
        </div>
      </div>
      <div
        class="css-8myd60"
      >
        <div
          class="css-19tvp9s"
        >
          <p
            class="chakra-text css-1876eo0"
          >
            High Card
          </p>
          <img
            alt="bubble"
            class="chakra-image css-13pr30p"
            src="/bubble.svg"
          />
        </div>
        <div
          class="css-70qvj9"
        >
          <div
            class="css-1mt82r2"
          >
            <div
              class="css-o3ijz8"
            >
              <svg
                fill="none"
                height="72"
                viewBox="0 0 61 72"
                width="61"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
                  fill="#005CFF"
                  fill-opacity="0.8"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-8pxmcc"
          >
            <p
              class="chakra-text css-1j4e3xu"
            >
              Player1
            </p>
            <hr
              aria-orientation="horizontal"
              class="chakra-divider css-1qn2z3z"
            />
            <div
              class="css-gmuwbf"
            >
              <p
                class="chakra-text css-1qwa78t"
              >
                19,358
              </p>
              <p
                class="chakra-text css-84i6iv"
              >
                pt
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-7xthq6"
    >
      <p
        class="chakra-text css-w1ydsw"
      >
        Bet +314pt
      </p>
    </div>
    <div
      class="css-z4tay6"
    >
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          fee
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          200
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          1st bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          442
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          2nd bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          0
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        =
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          total
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          642
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        pt
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerArea スナップショット/draw phase 1`] = `
<DocumentFragment>
  <div
    class="css-dvxtzn"
  >
    <div
      class="css-79elbk"
    >
      <div
        class="css-aryzif"
      >
        <div
          class="css-shjrb7"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-04.svg"
          />
        </div>
        <div
          class="css-fni08i"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Clubs-09.svg"
          />
        </div>
        <div
          class="css-1bd1kgk"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-10.svg"
          />
        </div>
        <div
          class="css-2ikapx"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-11.svg"
          />
        </div>
        <div
          class="css-16c4tub"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Hearts-12.svg"
          />
        </div>
      </div>
      <div
        class="css-8myd60"
      >
        <div
          class="css-19tvp9s"
        >
          <p
            class="chakra-text css-1876eo0"
          >
            One Pair → Three of a Kind
          </p>
          <img
            alt="bubble"
            class="chakra-image css-13pr30p"
            src="/bubble.svg"
          />
        </div>
        <div
          class="css-70qvj9"
        >
          <div
            class="css-1mt82r2"
          >
            <div
              class="css-o3ijz8"
            >
              <svg
                fill="none"
                height="72"
                viewBox="0 0 61 72"
                width="61"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
                  fill="#005CFF"
                  fill-opacity="0.8"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-8pxmcc"
          >
            <p
              class="chakra-text css-1j4e3xu"
            >
              Player1
            </p>
            <hr
              aria-orientation="horizontal"
              class="chakra-divider css-1qn2z3z"
            />
            <div
              class="css-gmuwbf"
            >
              <p
                class="chakra-text css-1qwa78t"
              >
                19,358
              </p>
              <p
                class="chakra-text css-84i6iv"
              >
                pt
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-7xthq6"
    >
      <p
        class="chakra-text css-8eqocq"
      >
        Exchange 1 cards
      </p>
    </div>
    <div
      class="css-z4tay6"
    >
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          fee
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          200
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          1st bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          442
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          2nd bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          0
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        =
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          total
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          642
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        pt
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerArea スナップショット/finished phase - active 1`] = `
<DocumentFragment>
  <div
    class="css-dvxtzn"
  >
    <img
      alt="win"
      class="chakra-image css-tz7uiz"
      src="/win.svg"
    />
    <div
      class="css-79elbk"
    >
      <div
        class="css-aryzif"
      >
        <div
          class="css-shjrb7"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-04.svg"
          />
        </div>
        <div
          class="css-fni08i"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Clubs-09.svg"
          />
        </div>
        <div
          class="css-1bd1kgk"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-10.svg"
          />
        </div>
        <div
          class="css-2ikapx"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-11.svg"
          />
        </div>
        <div
          class="css-16c4tub"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Hearts-12.svg"
          />
        </div>
      </div>
      <div
        class="css-8myd60"
      >
        <div
          class="css-70qvj9"
        >
          <div
            class="css-1mt82r2"
          >
            <div
              class="css-o3ijz8"
            >
              <svg
                fill="none"
                height="72"
                viewBox="0 0 61 72"
                width="61"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
                  fill="#005CFF"
                  fill-opacity="0.8"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-8pxmcc"
          >
            <p
              class="chakra-text css-1j4e3xu"
            >
              Player1
            </p>
            <hr
              aria-orientation="horizontal"
              class="chakra-divider css-1qn2z3z"
            />
            <div
              class="css-gmuwbf"
            >
              <p
                class="chakra-text css-1qwa78t"
              >
                19,358
              </p>
              <p
                class="chakra-text css-84i6iv"
              >
                pt
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-7xthq6"
    >
      <p
        class="chakra-text css-8eqocq"
      >
        High Card
      </p>
    </div>
    <div
      class="css-z4tay6"
    >
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          fee
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          200
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          1st bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          442
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          2nd bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          0
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        =
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          total
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          642
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        pt
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerArea スナップショット/finished phase - out 1`] = `
<DocumentFragment>
  <div
    class="css-dvxtzn"
  >
    <div
      class="css-79elbk"
    >
      <div
        class="css-aryzif"
      />
      <div
        class="css-8myd60"
      >
        <div
          class="css-70qvj9"
        >
          <div
            class="css-e18jq9"
          >
            <div
              class="css-o3ijz8"
            >
              <svg
                fill="none"
                height="72"
                viewBox="0 0 61 72"
                width="61"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
                  fill="#005CFF"
                  fill-opacity="0.8"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-1ch8wrx"
          >
            <p
              class="chakra-text css-1j4e3xu"
            >
              Player2
            </p>
            <hr
              aria-orientation="horizontal"
              class="chakra-divider css-1qn2z3z"
            />
            <div
              class="css-gmuwbf"
            >
              <p
                class="chakra-text css-1qwa78t"
              >
                0
              </p>
              <p
                class="chakra-text css-84i6iv"
              >
                pt
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-z4tay6"
    >
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          fee
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          200
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          1st bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          0
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          2nd bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          0
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        =
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          total
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          200
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        pt
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerArea スナップショット/out 1`] = `
<DocumentFragment>
  <div
    class="css-dvxtzn"
  >
    <div
      class="css-79elbk"
    >
      <div
        class="css-aryzif"
      />
      <div
        class="css-8myd60"
      >
        <div
          class="css-70qvj9"
        >
          <div
            class="css-e18jq9"
          >
            <div
              class="css-o3ijz8"
            >
              <svg
                fill="none"
                height="72"
                viewBox="0 0 61 72"
                width="61"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
                  fill="#005CFF"
                  fill-opacity="0.8"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-1ch8wrx"
          >
            <p
              class="chakra-text css-1j4e3xu"
            >
              Player3
            </p>
            <hr
              aria-orientation="horizontal"
              class="chakra-divider css-1qn2z3z"
            />
            <div
              class="css-gmuwbf"
            >
              <p
                class="chakra-text css-1qwa78t"
              >
                0
              </p>
              <p
                class="chakra-text css-84i6iv"
              >
                pt
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-7xthq6"
    >
      <p
        class="chakra-text css-1y05cao"
      >
        Out
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`LogPlayerArea スナップショット/自分のターンではない場合 1`] = `
<DocumentFragment>
  <div
    class="css-dvxtzn"
  >
    <div
      class="css-79elbk"
    >
      <div
        class="css-aryzif"
      >
        <div
          class="css-shjrb7"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-04.svg"
          />
        </div>
        <div
          class="css-fni08i"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Clubs-09.svg"
          />
        </div>
        <div
          class="css-1bd1kgk"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-10.svg"
          />
        </div>
        <div
          class="css-2ikapx"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Spades-11.svg"
          />
        </div>
        <div
          class="css-16c4tub"
        >
          <img
            alt="card"
            class="chakra-image css-0"
            src="/card/Hearts-12.svg"
          />
        </div>
      </div>
      <div
        class="css-8myd60"
      >
        <div
          class="css-19tvp9s"
        >
          <p
            class="chakra-text css-1876eo0"
          >
            High Card
          </p>
          <img
            alt="bubble"
            class="chakra-image css-13pr30p"
            src="/bubble.svg"
          />
        </div>
        <div
          class="css-70qvj9"
        >
          <div
            class="css-e18jq9"
          >
            <div
              class="css-o3ijz8"
            >
              <svg
                fill="none"
                height="72"
                viewBox="0 0 61 72"
                width="61"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12.4336 17.614C12.4336 7.88457 20.4352 0 30.3091 0C40.1829 0 48.1905 7.88457 48.1905 17.614C48.1905 27.3492 40.1829 35.2338 30.3091 35.2338C20.4352 35.2338 12.4336 27.3492 12.4336 17.614ZM30.4429 72.0003C42.2478 72.0003 52.931 67.3433 60.6312 59.8513V54.5366C60.6312 48.1099 55.2047 42.8941 48.505 42.8941H12.1262C5.42649 42.8941 0 48.1099 0 54.5366V59.5836C7.71835 67.2269 18.5046 72.0003 30.4429 72.0003Z"
                  fill="#005CFF"
                  fill-opacity="0.8"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="css-1ch8wrx"
          >
            <p
              class="chakra-text css-1j4e3xu"
            >
              Player2
            </p>
            <hr
              aria-orientation="horizontal"
              class="chakra-divider css-1qn2z3z"
            />
            <div
              class="css-gmuwbf"
            >
              <p
                class="chakra-text css-1qwa78t"
              >
                19,358
              </p>
              <p
                class="chakra-text css-84i6iv"
              >
                pt
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-7xthq6"
    />
    <div
      class="css-z4tay6"
    >
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          fee
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          200
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          1st bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          442
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        +
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          2nd bet
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          0
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        =
      </p>
      <div
        class="css-dvxtzn"
      >
        <p
          class="chakra-text css-c2y0x0"
        >
          total
        </p>
        <p
          class="chakra-text css-tb8v7v"
        >
          642
        </p>
      </div>
      <p
        class="chakra-text css-tb8v7v"
      >
        pt
      </p>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
